# rust-project-template

./: Cargo.toml
.cargo/: config
tests/common/: mod.rs
